added and updated fonts

--- a/style/index.css
+++ b/style/index.css
@@ -26,6 +26,7 @@ time, mark, audio, video {
     font-size: 62.5%;
     width: 80vw;
     text-align: center;
+    font-family: 'Raleway', sans-serif;
 }
 
 header{
@@ -33,7 +34,7 @@ header{
     border: 1px black solid;
     margin: 0 5rem;
     background-color: black;
-    
+    font-family: 'Satisfy', cursive; 
 
 }
 
@@ -51,6 +52,7 @@ h1{
     width: 30%;
     float: left;
     background-color: black;
+    font-family: 'Satisfy', cursive;
 }
 button{
     background-color: rgb(222, 139, 255);
@@ -65,6 +67,7 @@ button{
     }
 .container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     
 }
