--- a/style/index.css
+++ b/style/index.css
@@ -65,13 +65,18 @@ button{
     font-size: 1rem;
 
     }
-.container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    
+
+.main {
+    margin: 0 auto;
+    width: 45rem;
+    height: auto;
 }
 
-img {
-    width: 25%;
+.container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 15rem;
+    height: 15rem;
 }
